# blackboxai-1743760552772

./: README.md
drone_control_system/: CMakeLists.txt  README.md  package.xml
drone_control_system/include/drone_control_system/: object_tracker.h  sensor_processor.h  servo_control.h  soil_sampler.h  waypoint_processor.h
drone_control_system/launch/: drone_control.launch
drone_control_system/msg/: MavlinkPayloadCommand.msg  MavlinkServoCommand.msg  SensorFusion.msg  ServoCommand.msg
drone_control_system/src/: object_tracker.cpp  sensor_processor.cpp  servo_control.cpp  soil_sampler.cpp  video_streamer.cpp  waypoint_processor.cpp
