<?xml version="1.0"?>
<package format="2">
  <name>drone_control_system</name>
  <version>0.1.0</version>
  <description>Autonomous drone control system interfacing with QGroundControl and ArduPilot</description>

  <maintainer email="user@example.com">user</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>mavros</depend>
  <depend>mavros_msgs</depend>
  <depend>tf2_ros</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>wiringpi</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>mavlink</depend>
  <depend>mavros_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
</package>
